--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -419,35 +419,35 @@
         <h2 id="hdng9">Interest and investment income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>If your investment income is situated on a reserve, it is exempt from tax under section 87 of the Indian Act. The courts have established that determining whether income is situated on a reserve, and thus exempt from tax, requires identifying the various factors connecting the income to a reserve and weighing the significance of each factor. This is referred to as the “connecting factors test”.</p>
+<details><summary>Prior court decisions</summary>
 <p>On July&nbsp;22, 2011, the Supreme Court of Canada (SCC) released its decisions in the cases of Estate of Rolland Bastien v. Her Majesty the Queen and Alexandre Dubé v. Her Majesty the Queen (Bastien and Dubé cases). In both cases, the SCC found that the interest income was situated on a reserve and exempt from tax.</p>
-<p>The CRA will apply these decisions in similar situations to exempt an Indian's interest income from tax for the 2011 and following tax years.</p>
+</details>
+<p>The CRA applies these decisions in similar situations to exempt an Indian's interest income from tax for the 2011 and following tax years.</p>
 <p>A similar situation means that <strong>all</strong> of the following conditions are met:</p>
-<ol>
-<li>you earn interest income from a savings or chequing account, or from a term deposit or guaranteed investment certificate (GIC);</li>
-<li>you opened the savings or chequing account, or entered into a contract for a term deposit or GIC, with a financial institution (including a bank branch) located on a reserve;</li>
-<li>the financial institution is required to pay the interest income to you at a location of the financial institution on a reserve; and</li>
-<li>if your investment is a term deposit or GIC, then the interest rate is fixed or can be calculated at the time you obtain the investment.</li>
-</ol>
+<ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> You earn interest income from a savings or chequing account, or from a term deposit or guaranteed investment certificate (GIC)</li>
+<li><span class="fas fa-check fa-li text-success"></span> You opened the savings or chequing account, or entered into a contract for a term deposit or GIC, with a financial institution (including a bank branch) located on a reserve</li>
+<li><span class="fas fa-check fa-li text-success"></span> The financial institution is required to pay the interest income to you at a location of the financial institution on a reserve</li>
+<li><span class="fas fa-check fa-li text-success"></span> If your investment is a term deposit or GIC, then the interest rate is fixed or can be calculated at the time you obtain the investment</li>
+</ul>
 <p>The purchase of a fixed-rate term deposit or GIC provides the purchaser with the right to receive a certain fixed amount of income. The income-generating activities of the financial institution that issued the fixed-rate term deposit is not an important factor to consider when determining where the interest income is situated when the 4 conditions mentioned above are present.</p>
 <p>However, the investment income earned from mutual funds does not have the same factors connecting it to a reserve that the SCC found connected the interest income to a reserve in the Bastien and Dubé cases. This is because the mutual fund managers are normally not resident on a reserve. Their products may be sold through financial institutions with branches on reserve but this does not make the mutual fund resident on reserve.</p>
 <p>In general, mutual fund managers are located at the bank’s head office or other locations that are not on a reserve and the investment income earned is not at a fixed rate but is reliant on the fund’s performance and investment decisions made off-reserve by the mutual fund managers. Usually, the purchase of a unit in a mutual fund is not considered to result in a contractual obligation to pay set sums of money. The income-generating activities of the mutual funds, which entirely determine the rates of return of the investors, are in general commercial markets off the reserve.</p>
 <p>Therefore, the investment income generated from a mutual fund is not situated on a reserve and not exempt from tax unless there are other factors present that connect the income to a reserve.</p>
 <p>The CRA will continue to review other situations based on the facts of each case. The examples provided below may help you determine if your income is situated on a reserve, and thus exempt from tax.</p>
 
-<details><summary>Examples investment income</summary>
- <div id="example-investment"> 
+<details><summary>Examples where exempt or not exempt</summary>
 <section class="alert alert-info">
 	<p>Each of the individuals in the following examples are registered as Indians under the Indian Act.</p>
 </section>
-    
-    <h4>Example - Individual A</h4>
-
-    <p>Charles does not live on a reserve. He invested in a fixed-rate term deposit for a 1-year term with a credit union located on a reserve. At the end of the term, the credit union deposited the interest into Charles’ account with the credit union, located on a reserve.</p>
-    <p>The interest income earned by Charles meets all of the conditions to be exempt from tax. It was earned from a term deposit entered into with a financial institution located on a reserve, the interest income was paid into a location on a reserve, the interest rate was fixed, and the interest could be calculated at the time the investment was obtained.</p>
-   <h4>Example - Individual B</h4>
-    <p>Carla invested in units of a mutual fund through an account she set up at a financial institution located on a reserve.  The mutual fund is a global bond fund that invests in corporate and government debt securities from anywhere around the world. The mutual fund is not located on a reserve. Distributions are deposited in Carla’s account with the financial institution located on a reserve.</p>
+ <div id="example-investment"> 
+        <h4>Example where exempt - Individual I</h4>
+<p>Individual I does not live on a reserve. Individual I invested in a fixed-rate term deposit for a 1-year term with a credit union located on a reserve. At the end of the term, the credit union deposited the interest into individual I’ account with the credit union, located on a reserve.</p>
+    <p>The interest income earned by individual I meets all of the conditions to be exempt from tax. It was earned from a term deposit entered into with a financial institution located on a reserve, the interest income was paid into a location on a reserve, the interest rate was fixed, and the interest could be calculated at the time the investment was obtained.</p>
+   <h4>Example where not exempt - Individual J</h4>
+    <p>Individual J invested in units of a mutual fund through an account the individual set up at a financial institution located on a reserve.  The mutual fund is a global bond fund that invests in corporate and government debt securities from anywhere around the world. The mutual fund is not located on a reserve. Distributions are deposited in individual J’s account with the financial institution located on a reserve.</p>
     <p>The mutual fund manager is not resident on reserve. The units in the mutual fund are  sold through a financial institution with branches on reserve but this does not make the mutual fund resident on reserve. The mutual fund managers are located at the bank’s head office or other locations that are not on a reserve and the investment income earned is not at a fixed rate but is reliant on the fund’s performance and investment decisions made by the mutual fund managers.</p>
-    <p>The purchase of these units in a mutual fund is not considered to result in a contractual obligation to pay set sums of money. The income-generating activities of the mutual fund, which entirely determine Carla’s rate of return, were in general commercial markets off the reserve. Therefore, the investment income generated from Carla’s mutual fund is not situated on a reserve and not exempt from tax unless there are other factors present that connect the income to a reserve.</p>
+    <p>The purchase of these units in a mutual fund is not considered to result in a contractual obligation to pay set sums of money. The income-generating activities of the mutual fund, which entirely determine individual J’s rate of return, were in general commercial markets off the reserve. Therefore, the investment income generated from individual J’s mutual fund is not situated on a reserve and not exempt from tax unless there are other factors present that connect the income to a reserve.</p>
   </div>
 </details>
 
@@ -471,11 +471,7 @@
 <p>If you earn exempt income only and you have contributed to an RRSP, you cannot deduct your contributions on your tax return. By the same token, any withdrawals of your <strong>original</strong> RRSP contributions will not be taxable. However, since your exempt income did not create any RRSP contribution room, you will have to pay a penalty under Part X.1 of the Income Tax Act for your non-deductible contributions to your RRSP. Any investment earnings you withdraw from the RRSP will be taxed in the same way as interest and investment income.</p>
 <p>If you earn taxable income and contribute to an RRSP, the normal rules on claiming RRSP deductions apply to you (i.e., contributions will be deductible within the allowable limits based on earned income, and all withdrawals will be taxable).</p>
 
-
-<section class="alert alert-info">
-	<h2 class="h4">Note</h2>
-	<p>However, if your RRSP income is a result of a transfer of exempt RPP income, see <a href="#hdng4">Pension transfers from an RPP to an RRSP/RRIF</a>.</p>
-</section>
+	<p>However, if your RRSP income is a <strong>result of a transfer of exempt RPP income</strong>, see <a href="#hdng4">Pension transfers from an RPP to an RRSP/RRIF</a>.</p>
 
   
         <h3>Old Age Security (OAS) benefits</h3>
@@ -487,7 +483,7 @@
 
     
   
-        <h3>Education allowances and scholarships [Updated: 2015-01-30]</h3>
+        <h3>Education allowances and scholarships</h3>
 <p>The full amount of scholarships, fellowships, or bursaries that are received by you as a student with respect to enrolment in a program that entitles you to claim the full-time education tax credit is not taxable and is not reported as income on your tax return. If you are a part-time student, the amount that may be excluded from income with respect to scholarships, fellowships, or bursaries received in 2010 and later tax years is limited to the cost of materials related to the program and the fees paid to the designated educational institution in respect of the program. However, this limitation does not apply to taxpayers who are eligible for the disability tax credit or cannot be enrolled in an educational program on a full-time basis because of a mental or physical impairment. For more information regarding the scholarship exemption, please see <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/income-tax/income-tax-folios-index/series-1-individuals/folio-2-students/income-tax-folio-s1-f2-c3-scholarships-research-grants-other-education-assistance.html">Income Tax Folio: S1-F2-C3, Scholarships, Research Grants and Other Education Assistance</a>. For more information regarding the full-time and the part-time education tax credit please see <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/income-tax/income-tax-folios-index/series-1-individuals/folio-2-students/income-tax-folio-s1-f2-c1-education-textbook-tax-credits.html">Income Tax Folio: S1-F2-C1, Education and Textbook Tax Credits</a>.</p>
 <p>If you are not eligible for the full-time education tax credit, your scholarship, bursary or fellowship may still be tax-exempt if it came from Indigenous and Northern Affairs Canada (INAC) (either directly or through your band) as part of INAC’s Post-Secondary Education Program. This means that amounts you received from either INAC’s Post-Secondary Student Support Program or its University and College Entrance Preparation Program are treated as tax-exempt. This position is under review but continues to be applied by the CRA. There is currently no requirement to issue T4A slips for these amounts.</p>
 <p>In the event that your scholarship, bursary, or fellowship income is not fully or partially exempt under one of the situations described above, only the part of the post-secondary scholarship, fellowship or bursary that is more than $500 must be reported on your income tax return.</p>
