--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -450,7 +450,7 @@
     <p>The purchase of these units in a mutual fund is not considered to result in a contractual obligation to pay set sums of money. The income-generating activities of the mutual fund, which entirely determine individual J’s rate of return, were in general commercial markets off the reserve. Therefore, the investment income generated from individual J’s mutual fund is not situated on a reserve and not exempt from tax unless there are other factors present that connect the income to a reserve.</p>
   </div>
 </details>
-
+  <h3 >Other interest and investment income</h3>
   <details><summary>Dividend income</summary>
 <p>If you are a shareholder of a corporation that operates only on a reserve, any dividends you receive from the corporation will be eligible for the tax exemption under section 87 of the Indian Act. This applies when the head office, management, and <strong>principal income-generating activities</strong> of the corporation that pays your dividends are situated on a reserve.</p>
 </details>
