--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -294,20 +294,20 @@
 <div id="ajax-reg">
 <p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
-<p>To determine if the First Nations employment income is tax-exempt or partially tax-exempt, ask your employee to fill out Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income to certify they meet <strong>all</strong> of the following conditions for the exemption:</p>
+<p>To determine if the First Nations employment income is tax-exempt or partially tax-exempt, ask your employee to fill out part 1 of Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income to certify they meet <strong>all</strong> of the following conditions for the exemption:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Your employee is registered under the Indian Act</li> 	 
 <li class="cnjnctn-col">Your employee is not a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the Indian Act</li>
-<li class="cnjnctn-col">If your employee lives on a reserve, it is their principal place of residence and is the centre of my daily routine</li>  
+<li class="cnjnctn-col">If your employee lives on a reserve, it is their principal place of residence and is the centre of their daily routine</li>  
 </ul>
-<p>You must also certify that information given on Form TD1-IN is correct and complete.</p>
+<p>You must also certify that information you provided on Form TD1-IN is correct and complete.</p>
 
 <details><summary>Situation: Employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
 <div id="ajax-non-emp">
-<p>Generally, if the worker is receiving unemployment insurance benefits, retiring allowances, Canada Pension Plan (CPP) payments, Quebec Pension Plan (QPP) payments, Registered Pension Plan (RPP) benefits or Wage Loss Replacement Plan (WLRP) benefits is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
+<p>Generally, if the employee is receiving employment-related income, for example: unemployment insurance benefits, retiring allowances, Canada Pension Plan (CPP) payments, Quebec Pension Plan (QPP) payments, Registered Pension Plan (RPP) benefits or Wage Loss Replacement Plan (WLRP) benefits, the employment-related income is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
 
-<p>If the employment income was partly-exempt from income tax, the exemption is prorated to the portion of the these amounts.</p>
+<p>If that employment income was partly-exempt from income tax, the employment-related income arising from the exempt share of that income will also be exempt from income tax.</p>
 
 <p> <a href="#ajax-example-emp-related" aria-controls="ajax-example-emp-related" class="overlay-lnk" role="button">Example employment-related income <span class="far fa-question-circle"></span></a> </p>
 </div>
@@ -324,7 +324,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
   <div id="ajax-notreg">
-<p>You must deduct CPP, EI and income tax the same as regular workers. </p> 
+<p>You must deduct CPP, EI and income tax as you would for your other employees. </p> 
 </div></li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employee meets all conditions for the exemption, continue to <a href="#step2">Step 2 - Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
 </ul>
@@ -345,7 +345,7 @@
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your situation is <strong>uncommon</strong>, <strong>do not</strong> continue to next step.</p> 
   <div id="ajax-notreg2">
 <p>You can call CRA at <strong>1-800-959-8281</strong>.  </p> 
-<p> You must deduct CPP, EI and income tax the same as regular workers until you receive confirmation from the CRA. </p> 
+<p> You must deduct CPP, EI and income tax as you would for your other employees until you receive confirmation from the CRA. </p> 
 </div></li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If your situation is common, continue to <a href="#step3">Step 3 - Use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
 </ul>
@@ -357,35 +357,36 @@
 <ol class="lst-stps-sub">
 
 <li><h4 id="step3a">Determine if guideline 2 applies</h4>
-<details><summary>Your employee lives on a reserve and you are a resident on a reserve</summary>
+<details><summary>Your First Nations employee lives on a reserve and you (as the employer) are a resident on a reserve</summary>
 <p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Employee lives on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">First Nations employee lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
 </ul>
 
 <p><a href="#ajax-example2a" aria-controls="ajax-example2a" class="overlay-lnk" role="button">Examples where exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example2b" aria-controls="ajax-example2b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
-<p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
+<p>Where First Nations employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee lives on a reserve <strong>and</strong> you a resident on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> live on a reserve <strong>or</strong> you are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - Determine if guideline 4 applies</a>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee lives on a reserve <strong>and</strong> you (as the employer) are a resident on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee <strong>does not</strong> live on a reserve <strong>or</strong> you (as the employer) are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - Determine if guideline 4 applies</a>.</li>
             </ul>
 </li>
 
 <li><h4 id="step3b">Determine if guideline 4 applies</h4>
-<details><summary>You are Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
-<p>Generally, the income is exempt from income tax if the employer is <strong>all </strong>of the following:</p>
+<details><summary>You (as the employer) are resident on a reserve and are a First Nations band or organization and your First Nations employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of First Nations individuals who for the most part live on reserves</summary>
+<p>Generally, the income is exempt from income tax if you (as the employer) <strong>all </strong>of the following:</p>
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">Resident on a reserve </li>
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">An Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves  </li>
-<li class="cnjnctn-col">An Indian organization controlled by an Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the <a href="#ajax-def5" aria-controls="ajax-def5" class="overlay-lnk" role="button">social, cultural, educational, or economic development <span class="far fa-question-circle"></span></a> of Indians who for the most part live on reserves </li>
+<li class="cnjnctn-col">A First Nations band which has a reserve, or a tribal council representing one or more First Nations bands that have reserves  </li>
+<li class="cnjnctn-col">A First Nations organization controlled by a First Nations band which has a reserve, or a tribal council representing one or more First Nations bands that have reserves, and the organization is dedicated exclusively to the <a href="#ajax-def5" aria-controls="ajax-def5" class="overlay-lnk" role="button">social, cultural, educational, or economic development <span class="far fa-question-circle"></span></a> of First Nations individuals who for the most part live on reserves </li>
 </ul>
 </li>
-<li class="cnjnctn-col">Employee's duties of employment are in connection with the employer's non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>
+<li class="cnjnctn-col">Employee's duties of employment are in connection with the employer's non-commercial activities carried on exclusively for the benefit of First Nations individuals who for the most part live on reserves </li>
 </ul>
 
 
@@ -394,8 +395,8 @@
 
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee meets all conditions of an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> meet all conditions or the situation <strong>does not</strong> apply, continue to <a href="#step3c">Step 3c - Determine the percentage of duties related to employment on a reserve</a>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If you as the employer are resident on a reserve and are a First Nations band or organization and your First Nations employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of First Nations individuals who for the most part live on reserves, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the situation <strong>does not</strong> apply, continue to <a href="#step3c">Step 3c - Determine the percentage of duties related to employment on a reserve</a>.</li>
             </ul>
 
 </li>
@@ -492,12 +493,12 @@
 </li>
 
 <li><h4 id="step3d">Determine if guideline 3 applies</h4>
-<details><summary>Employee lives on a reserve or you are a resident on a reserve</summary>
+<details><summary>First Nations employee lives on a reserve or you are a resident on a reserve</summary>
 <p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Employee lives on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">First Nations employee lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
 </ul>
 </li>
@@ -992,7 +993,7 @@
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def2"></div>
 	</div></section>
 
-<section id="ajax-def3" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">Employee lives on the reserve</h2>
+<section id="ajax-def3" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">First Nations employee lives on the reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def3"></div>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
