--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -402,10 +402,10 @@
 </li>
 
 <li><h4 id="step3c">Determine the percentage of duties related to employment on a reserve</h4>
-<p>To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
+<p>To determine if guidelines 1 or 3 apply to the employment income, you need to determine the portion of employment duties performed on a reserve. The following 2 factors are generally taken into account when determining the portion of employment duties performed on a reserve:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">Whether an actual "duty of employment" was performed (the employee was required to perform the particular task and was compensated by the employer for performing that particular task)</li>
+<li class="cnjnctn-col">Whether an actual "duty of employment" was performed (the First Nations employee was required to perform the particular task and was compensated by the employer for performing that particular task)</li>
 <li class="cnjnctn-col">The extent to which the duty of employment was performed on a reserve</li>
 </ul>
 
@@ -449,8 +449,8 @@
                   </ul>
 
 <details><summary>Calculation example</summary>
-<p>An employer requires their status Indian employee to perform duties related to their employment both on and off reserve. The employee had a total of 220 working days in the year, 44 of which were on reserve. These days spent working on the reserve did not include either vacation or sick leave. </p>
-<p>The percentage of the status Indian employee’s duties related to employment performed on a reserve is calculated as follows:</p>
+<p>An employer requires their First Nations employee to perform duties related to their employment both on and off reserve. The employee had a total of 220 working days in the year, 44 of which were on reserve. These days spent working on the reserve did not include either vacation or sick leave. </p>
+<p>The percentage of the First Nations employee’s duties related to employment performed on a reserve is calculated as follows:</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
 
 			<li><span class="fa-stack text-success">
@@ -493,7 +493,7 @@
 </li>
 
 <li><h4 id="step3d">Determine if guideline 3 applies</h4>
-<details><summary>First Nations employee lives on a reserve or you are a resident on a reserve</summary>
+<details><summary>First Nations employee lives on a reserve or you (as the employer) are resident on a reserve</summary>
 <p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
@@ -502,7 +502,7 @@
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
 </ul>
 </li>
-<li class="cnjnctn-col">Employee performs more than 50% of their employment duties on a reserve</li>
+<li class="cnjnctn-col">First Nations employee performs more than 50% of their employment duties on a reserve</li>
 </ul>
 
 <p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
@@ -516,21 +516,21 @@
 </li>
 
 <li><h4 id="step3e">Determine if guideline 1 applies</h4>
-<details><summary>Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</summary>
-<p>Generally, the income is exempt from income tax if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
+<details><summary>First Nations employee performs at least 90% of their employment duties on a reserve </summary>
+<p>Generally, the income is exempt from income tax if the First Nations employee performs at least 90% of the duties related to their employment on a reserve.</p>
 
 <p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step3f">Step 3f - Calculate the proration of the employment income - Guideline 1 (propration rule).</a></li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee performs at least 90% of their employment duties on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee performs certain duties of their employment duties on a reserve, continue to <a href="#step3f">Step 3f - Calculate the proration of the employment income - Guideline 1 (propration rule).</a></li>
             </ul>
 </li>
 <li><h4 id="step3f">Calculate the proration of the employment income - Guideline 1 (propration rule)</h4>
-<details><summary>Your employee performs certain duties of their employment duties on a reserve</summary>
-<p>Generally, the income is partly-exempt from income tax if your employee performs certain duties related to their employment on a reserve.</p>
-<p>The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
+<details><summary>Your First Nations employee performs less than 90% of their employment duties on a reserve</summary>
+<p>Generally, the income is partly-exempt from income tax if your First Nations employee performs less than 90% of the duties related to their employment on a reserve and the income is not exempt in other guidelines.</p>
+<p>The exemption is prorated to the portion of the income related to the duties the First Nations employee performed on the reserve.</p>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
@@ -564,7 +564,7 @@
 </ul></li>
 </ul>
 <div id="ajax-cpp-info">
-<p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> election - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
+<p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
 <p>If the employer chooses not to apply for coverage, a <strong>First Nations employee</strong> can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
   </div>
 	 </div>
